<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="open_drawer" translatable="false">pen navigation drawer</string>
    <string name="close_drawer" translatable="false">Close navigation drawer</string>
    <string name="app_name" translatable="false">PlanTEA</string>
    <string name="btn_Acceder">Acceder</string>
    <string name="btn_CambiarPass">Cambiar Contraseña</string>
    <string name="lbl_Pass">Contraseña actual</string>
    <string name="lbl_NewPass">Contraseña nueva</string>
    <string name="lbl_RepPass">Volver a introducir la contraseña</string>
    <string name="lbl_NuevaPass">Nueva contraseña</string>
    <string name="btn_Guardar">Guardar</string>
    <string name="btn_tutorial">Volver a ver el tutorial</string>
    <string name="lbl_profesionales">Profesionales</string>
    <string name="lbl_Consultas">Consultas</string>
    <string name="lbl_Lugares">Lugares</string>
    <string name="lbl_Favoritos">Favoritos</string>
    <string name="lbl_IrColegio">Ir al colegio</string>
    <string name="lbl_IrMedico">Ir al médico</string>
    <string name="lbl_Comprar">Hacer la compra</string>
    <string name="lbl_CortarsePelo">Cortarse el pelo</string>
    <string name="lbl_Desplazamiento">Desplazamiento</string>
    <string name="lbl_Accion">Acción</string>
    <string name="lbl_Entretenimiento">Entretenimiento</string>
    <string name="lbl_Recompensa">Recompensa</string>
    <string name="lbl_Aniadir">Añadir</string>
    <string name="lbl_NuevoPicto">Añadir pictograma</string>
    <string name="lbl_imprevistoPicto">Cambiar pictograma</string>
    <string name="lbl_NuevoPictoSemana">Añadir pictograma a la semana</string>
    <string name="lbl_NuevaCategoria">Añadir categoría</string>
    <string name="lbl_Planes">Planificaciones Disponibles</string>
    <string name="lbl_CrearPlanActividad">Título:</string>
    <string name="lbl_login">Introduce la contraseña</string>
    <string name="lbl_RepitePass">Repite la contraseña</string>
    <string name="lbl_CrearPass">Crear contraseña</string>
    <string name="item_ayuda">Ayuda</string>
    <string name="lbl_hora">Horas</string>
    <string name="lbl_dia">Días</string>
    <string name="lbl_semana">Semanas</string>
    <string name="lbl_mes">Meses</string>
    <string name="lbl_anio">Años</string>
    <string name="lbl_izquierda">Izquierda</string>
    <string name="lbl_derecha">Derecha</string>
    <string name="lbl_si">Si</string>
    <string name="lbl_mal">No</string>
    <string name="lbl_sintomas">¿Qué te pasa?</string>
    <string name="lbl_dolores">¿Dónde te duele?</string>
    <string name="lbl_sentimientos">¿Cómo te sientes?</string>
    <string name="lbl_configuracion">Configuración</string>
    <string name="lbl_infoPlanificador">Datos del planificador/a</string>
    <string name="lbl_infoplaificador_texto">Usuario responsable de crear y gestionar planificaciones</string>
    <string name="lbl_infoUsuarioTEA">Datos de la persona supervisada </string>
    <string name="lbl_infoUsuarioTEA_texto">Usuario capaz de ver y seguir las planificaciones</string>
    <string name="lbl_infoactividad">Datos de la actividad tranquilizadora </string>
    <string name="lbl_infoactividad_texto">Representa el objeto que calma a la persona con TEA</string>
    <string name="btn_add">Planificación</string>
    <string name="lbl_mensaje">No hay planificaciones disponibles</string>
    <string name="lbl_lunes">Lunes</string>
    <string name="lbl_martes">Martes</string>
    <string name="lbl_miercoles">Miércoles</string>
    <string name="lbl_jueves">Jueves</string>
    <string name="lbl_viernes">Viernes</string>
    <string name="lbl_sabado">Sábado</string>
    <string name="lbl_domingo">Domingo</string>
    <string name="btn_nuevo_evento">Evento</string>
    <string name="lbl_nuevoEvento">Nuevo Evento</string>
    <string name="lbl_mensaje_evento">No hay eventos para este día. Pulsa en \"+\" para crear un evento.</string>
    <string name="btn_horaEvento">Hora</string>
    <string name="item_perfil">Preferencias</string>
    <string name="lbl_mensajeNinio">No hay eventos para seguir este dia</string>
    <string name="lbl_indice1">1. Descripción de la aplicación PlanTEA</string>
    <string name="lbl_indice2">2. Ajuste de las preferencias</string>
    <string name="lbl_indice2_1">- Información de los usuarios</string>
    <string name="lbl_indice2_2">- Actividad Tranquilizadora</string>
    <string name="lbl_indice2_3">- Notificaciones</string>
    <string name="lbl_indice3">2. Descripción de la pantalla inicial</string>
    <string name="lbl_indice4">3. Usuario Planificador</string>
    <string name="lbl_indice4_1">3.1 Inicio de la aplicación por primera vez: Creación de contraseña</string>
    <string name="lbl_indice4_2">3.1 Uso seguro de la aplicación: Autenticación</string>
    <string name="lbl_indice4_3">3.2 Cambio de contraseña</string>
    <string name="lbl_indice4_4">3.3 Descripción de la pantalla inicial</string>
    <string name="lbl_indice4_5">3.4 Creación de un evento</string>
    <string name="lbl_indice4_6">- Opciones de los eventos</string>
    <string name="lbl_indice4_7">3.5 Creación de una planificación</string>
    <string name="lbl_indice4_8">- Pictogramas</string>
    <string name="lbl_indice4_9">- Creación de un nuevo pictograma</string>
    <string name="lbl_indice4_10">- Pasos para crear planificación</string>
    <string name="lbl_indice4_11">- Opciones de las planificaciones</string>
    <string name="lbl_indice5">4. Usuario supervisado</string>
    <string name="lbl_indice5_1">4.1 Descripción de la Pantalla inicial</string>
    <string name="lbl_indice5_2">4.2 Seguimiento de una planificación</string>
    <string name="lbl_indice5_3">4.3 Cuaderno de comunicación</string>
    <string name="lbl_indice5_4">- Categorías del cuaderno de comunicación</string>
    <string name="lbl_indice6">5. Ajuste de las preferencias</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="lbl_actividades">Actividades</string>
    <string name="lbl_actividades_objeto">Actividad tranquilizadora</string>
    <string name="lbl_actividades_youtube" translatable="false">YouTube</string>
    <string name="lbl_configuracion_objeto2">Actividad tranquilizadora:</string>
    <string name="lbl_configuracion_notificaciones">Notificaciones de los eventos</string>
    <string name="lbl_configuracion_notificaciones_1">1 hora antes</string>
    <string name="lbl_configuracion_notificaciones_2">1 día antes</string>
    <string name="lbl_configuracion_notificaciones_3">1 semana antes</string>
    <string name="lbl_nombre">Nombre</string>
    <string name="lbl_seleccionaAvatar">Selecciona el avatar del planificador</string>
    <string name="lbl_seleccionaAvatarTEA">Selecciona el avatar de la persona supervisada</string>
    <string name="lbl_seleccionaActividad">Selecciona la actividad tranquilizadora</string>
    <string name="lbl_seleccionarFoto">Seleccionar foto de la galería</string>
    <string name="lbl_saltar">Saltar</string>
    <string name="lbl_deshacer">Deshacer</string>
    <string name="lbl_reproducir">Reproducir</string>
    <string name="lbl_seleccionaPictograma">Selecciona la opción de visualización de los pictogramas</string>
    <string name="lbl_seleccionaPictograma2">Los pictogramas se visualizarán según su preferencia</string>
    <string name="lbl_cuaderno">Cuaderno de comunicación</string>
    <string name="lbl_iniciarSesion">Iniciar sesión</string>
    <string name="lbl_noCuenta">¿No tienes cuenta? Regístrate aquí</string>
    <string name="lbl_nombreUsuario">Nombre de usuario</string>
    <string name="lbl_email">Correo electrónico</string>
    <string name="lbl_contrasena">Contraseña</string>
    <string name="lbl_registrarse">Registrarse</string>
    <string name="lbl_datosPlanificador">Datos del planificador </string>
    <string name="lbl_datosPlanificado">Datos de la persona supervisada</string>
    <string name="lbl_datosNombre">Nombre</string>
    <string name="lbl_datosContraseña">Volver a introducir la contraseña</string>
    <string name="lbl_crearCuenta">Crear cuenta</string>
    <string name="lbl_eliminarEvento">Eliminar evento</string>
    <string name="lbl_eliminarEventoMensaje">¿Seguro que deseas eliminar el evento seleccionado?</string>
    <string name="lbl_cancelar">Cancelar</string>
    <string name="lbl_eliminar">Eliminar</string>
    <string name="lbl_eliminarPlanificacion">Eliminar planificación</string>
    <string name="lbl_eliminarPlanificacionMensaje">¿Seguro que deseas eliminar la planificación seleccionada?</string>
    <string name="lbl_eliminarPlanificacionMensaje2">Si desea eliminar la planificación, se eliminarán también todos los eventos asociados</string>
    <string name="lbl_eliminarPlanificacionMensaje3">Eliminar planificación</string>
    <string name="lbl_historialSocial">Texto adicional para:</string>
    <string name="lbl_cerrarSesion">¿Estás seguro/a que quieres cerrar la sesión?</string>
    <string name="lbl_cerrarSesionBotton">Cerrar sesión</string>
    <string name="lbl_nuevaPlanificacion">Nueva planificación</string>
    <string name="lbl_salirPlanificacion">Salir de la planificación</string>
    <string name="lbl_salirPlanificacion2">¿Estás seguro/a que quieres salir de la planificación?</string>
    <string name="lbl_salirPlanificacion3">Si se sale ahora, se perderá todo el progreso realizado</string>
    <string name="lbl_salirPlanificacionBotton">Salir</string>
    <string name="lbl_contraseniaOlvidada">¿Has olvidado la contraseña?</string>
    <string name="lbl_manual">Manual de usuario</string>
    <string name="temporizador">Temporizador</string>
    <string name="navegador">Navegador de YouTube</string>
    <string name="selecciona_hora">Selecciona una hora</string>
    <string name="selecciona_imagen">Selecciona una imagen de la galería</string>
    <string name="fecha">Fecha:</string>
    <string name="hora">Hora:</string>
    <string name="recordatorio">Recordatorio:</string>
    <string name="planificaciones_disponibles">Planificaciones disponibles:</string>
    <string name="eventos_disponibles">Eventos disponibles:</string>
    <string name="recordar">Recordar…</string>
    <string name="recordar_5min">5 minutos antes</string>
    <string name="recordar_1hora">1 hora antes</string>
    <string name="recordar_1dia">1 día antes</string>
    <string name="recordar_personalizado">A las…</string>
    <string name="aceptar">Aceptar</string>
    <string name="bienvenido">¡Bienvenido a PlanTEA!</string>
    <string name="bienvenido_texto">En PlanTEA podrás planificar tus eventos y actividades de manera sencilla y rápida.</string>
    <string name="explicacion_actividad">La actividad tranquilizadora representa el objeto que calma a la persona con TEA</string>
    <string name="sesion_google">Iniciar sesión con Google</string>
    <string name="licencias">Licencias de código abierto</string>
    <string name="ilustraciones">Ilustraciones</string>
    <string name="arasaac">Centro Aragonés para la Comunicación Aumentativa y Alternativa</string>
    <string name="arasaac_terms">Condiciones de uso, Noviembre 2023</string>
    <string name="manypixels" translatable="false">manypixels</string>
    <string name="manypixels_terms">Condiciones de uso, 25 de Enero, 2019</string>
    <string name="freepik" translatable="false">Freepik</string>
    <string name="freepik_terms">Condiciones de uso, Marzo 2023</string>
    <string name="iconos">Iconos</string>
    <string name="svg_repo" translatable="false">SVG Repo</string>
    <string name="svg_repo_terms">Licencia de SVG Repo, 03 de Enero, 2023</string>
    <string name="flaticon" translatable="false">Flaticon</string>
    <string name="lbl_tulo">Título</string>
    <string name="crear_cuaderno">Crear cuaderno</string>
    <string name="termometro">Termometro</string>
</resources>