<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_calendario2">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/recordar"
            android:layout_marginBottom="10dp"
            android:textSize="16sp" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/checkBox_min"
            android:layout_width="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/recordar_5min"
            android:textSize="14sp"
            android:textColor="?colorOnSurface"/>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/checkBox_hora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/recordar_1hora"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:textSize="14sp"
            android:textColor="?colorOnSurface" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/checkBox_dia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/recordar_1dia"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:textSize="14sp"
            android:textColor="?colorOnSurface"
            />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/checkBox_personalizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/recordar_personalizado"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:textSize="14sp"
            android:textColor="?colorOnSurface" />


        <Button
            android:id="@+id/btn_aceptarRecordatorio"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="?colorPrimary"
            android:fontFamily="@font/poppins_semibold"
            android:padding="12dp"
            android:text="@string/aceptar"
            android:textAllCaps="true"
            android:textColor="#203130"
            android:textSize="13dp" />
    </LinearLayout>



    <ImageView
        android:id="@+id/icono_CerrarDialogo"
        android:layout_width="48dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="Cerrar seccion"
        android:background="@drawable/bg_close_button"
        android:src="@drawable/ic_baseline_close_24"
        android:padding="12dp"
        android:alpha="0.9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>