<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    tools:context=".presentacion.actividades.planificador.CalendarioActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="687dp"
        android:layout_height="475dp"

        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/fragment_calendario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_calendar_anterior"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_arrow_back_32"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/lbl_mes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="@font/montserrat_medium"
                android:text="Noviembre 2021"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/image_calendar_siguiente"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_arrow_forward_32"
                app:tint="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_lunes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_lunes"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/lbl_martes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/lbl_martes"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/lbl_miercoles"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/lbl_miercoles"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/lbl_jueves"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/lbl_jueves"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/lbl_viernes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/lbl_viernes"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/lbl_sabado"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/lbl_sabado"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/lbl_domingo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/lbl_domingo"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_calendario"
            android:layout_width="match_parent"
            android:layout_height="389dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_calendario"
        android:layout_width="538dp"
        android:layout_height="587dp"
        android:background="@drawable/borde_calendario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.924">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>