<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@drawable/fondo_dialogo_login"
    android:layout_margin="15dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="65dp"
            android:layout_height="64dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/svg_plan_icon" />

        <TextView
            android:id="@+id/lbl_Logout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/lbl_eliminarPlanificacion"
            android:textColor="?colorOnSurface"
            android:textSize="@dimen/modalTitle" />

        <TextView
            android:id="@+id/lbl_Logout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_eliminarPlanificacionMensaje2"
            android:textColor="?colorOnSurface"
            android:textSize="@dimen/modalText"
             />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_cancelarPlan"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/lbl_cancelar"
            android:textColor="#203130"
            android:textSize="@dimen/button"
            app:cornerRadius="25dp" />

        <Button
            android:id="@+id/btn_eliminarPlan"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/lbl_eliminarPlanificacionMensaje3"
            android:textColor="#203130"
            app:cornerRadius="25dp"
            android:textSize="@dimen/button" />

    </LinearLayout>


    </LinearLayout>


    <ImageView
        android:id="@+id/icono_CerrarDialogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/ic_baseline_close_24" />
</androidx.constraintlayout.widget.ConstraintLayout>