<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/fondo_dialogo_login">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingStart="35dp"
        android:paddingEnd="35dp"
        android:paddingBottom="20dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <FrameLayout
            android:id="@+id/card_imagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_textinputedit"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/img_NuevoPicto"
                style="@style/addPhotoBackground"
                android:layout_width="140dp"
                android:layout_margin="1dp"
                android:layout_height="140dp"
                android:layout_gravity="center" />

            <ImageView
                android:id="@+id/id_editIcon"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_gravity="end|top"
                android:layout_margin="5dp"
                android:visibility="gone"
                android:contentDescription="@string/lbl_Consultas"
                app:srcCompat="@drawable/edit_image_svg" />
        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_Titulo"
            style="@style/cornertextInput"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/lbl_tulo"
            android:inputType="text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textInput"
                android:inputType="text"
                android:layout_marginEnd="1dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_termometro"
            style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_textinputedit"
            android:contentDescription="Interruptor, información del planificado"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:text="@string/termometro"
            android:textColor="?colorOnSurface"
            android:textSize="@dimen/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_GuardarPicto"
            style="@style/Widget.Material3.Button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/crear_cuaderno"
            android:textColor="@color/darkGreen"
            android:textSize="@dimen/button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>